force-app/main/default/objects/KimbleOne__AssignmentDemandStatusResourcingStatus__c/KimbleOne__AssignmentDemandStatusResourcingStatus__c.object-meta.xml
<CustomObject>
    <label>Assignment Demand Status Res Status</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Assignment Demand Status Res Status</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Demand Status Res Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>