force-app/main/default/objects/KimbleOne__AssignmentDemandStatusResourcingStatus__c/fields/KimbleOne__AssignmentDemandStatus__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AssignmentDemandStatus__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assignment Demand Status</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>AssignmentDemandStatus</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Assignment Demand Status Res Status</relationshipLabel>
    <relationshipName>AssignmentDemandStatusResStatus</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>