force-app/main/default/objects/KimbleOne__AssignmentDemandStatusResourcingStatus__c/fields/KimbleOne__Priority__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Priority__c</fullName>
    <label>Priority</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>