force-app/main/default/objects/KimbleOne__AssignmentDemandStatusResourcingStatus__c/fields/KimbleOne__ResourcingStatus__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcingStatus__c</fullName>
    <label>Resourcing Status</label>
    <referenceTo>KimbleOne__ResourcingStatus__c</referenceTo>
    <relationshipLabel>Assignment Demand Status Res Status</relationshipLabel>
    <relationshipName>AssignmentDemandStatusResStatus</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>